--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -144,7 +144,7 @@
 	}
 
 	.channel-bar {
-		@apply w-80 h-auto m-0 ml-16 bg-gray-200 dark:bg-black
+		@apply w-96 h-auto m-0 bg-gray-200 dark:bg-black
      overflow-hidden;
 	}
 
