--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -27,8 +27,13 @@
   justify-center rounded-3xl bg-gray-400 
   text-green-500 shadow-lg
     transition-all duration-300
-    ease-linear hover:rounded-xl hover:bg-green-600
-    hover:text-white dark:bg-gray-800;
+    ease-linear hover:rounded-xl hover:text-gray-200 dark:bg-primary;
+	}
+	.sidebar-icon__meta {
+		@apply relative bottom-0 mx-auto mt-2 mb-2 flex h-12 w-12 
+		cursor-pointer items-center justify-center rounded-3xl bg-tertiary 
+		text-primary shadow-lg transition-all duration-300 ease-linear 
+		hover:rounded-xl hover:bg-primary hover:text-tertiary;
 	}
 
 	.sidebar-tooltip {
