--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -3,6 +3,7 @@
 @tailwind components;
 @layer base {
 	:root {
+		--color-main: 217 217 217;
 		--color-primary: 0 0 0;
 		--color-secondary: 45 130 183;
 		--color-tertiary: 235 138 144;
