--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -24,8 +24,7 @@
 	.sidebar-icon {
 		@apply relative mx-auto mt-2 mb-2 
     flex h-12 w-12 cursor-pointer items-center  
-  justify-center rounded-3xl bg-gray-400 
-  text-green-500 shadow-lg
+  justify-center rounded-3xl text-green-500 shadow-lg
     transition-all duration-300
     ease-linear hover:rounded-xl hover:text-gray-200 dark:bg-primary;
 	}
