--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -6,7 +6,7 @@
 		--color-main: 156 156 156; /* Primary */
 		--color-primary: 128 128 128;  /* Secondary */
 		--color-secondary: 45 130 183;  /* Extra */
-		--color-tertiary: 235 138 144;  /* Extra */
+		--color-tertiary: 235 138 144;  /* Accent */
 		--color-option: 66 226 184;  /* Extra */
 		--color-text: 17 17 17;  /* Tertiary */
 	}
