--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -3,12 +3,15 @@
 @tailwind components;
 @layer base {
 	:root {
-		--color-main: 156 156 156; /* Primary */
-		--color-primary: 128 128 128; /* Secondary */
+		--color-main: 237 242 245; /* Primary */
+		--color-primary: 221 229 235; /* Secondary */
 		--color-secondary: 45 130 183; /* Extra */
-		--color-tertiary: 235 138 144; /* Accent */
-		--color-option: 66 226 184; /* Extra */
-		--color-text: 17 17 17; /* Tertiary */
+		--color-tertiary: 197 204 209; /* Accent */
+		--color-option: 221 229 235; /* Extra */
+		--color-text: 31 32 33; /* Tertiary */
+		
+		/** Dark theme **/
+		/* --color-main-dark: 3 17 46; */
 	}
 }
 
